[package]
name = "text-grid"
version = "0.1.0"
authors = ["frozenlib"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/text-grid-rs"
documentation = "https://docs.rs/text-grid/"
keywords = ["text", "pretty", "table", "grid"]
categories = ["Command-line interface"]
description = "A library to create formatted plain-text tables."
edition = "2018"

[dependencies]
unicode-width = "0.1.5"
