[package]
name = "text-grid"
version = "0.2.0"
authors = ["frozenlib"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/text-grid-rs"
documentation = "https://docs.rs/text-grid/"
keywords = ["text", "pretty", "table", "grid"]
categories = ["command-line-interface"]
description = "A library to create formatted plain-text tables."
exclude = [".vscode/*"]
edition = "2021"

[dependencies]
unicode-width = "0.1.5"
