[package]
name = "text-grid"
version = "0.4.0"
authors = ["frozenlib"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/text-grid-rs"
documentation = "https://docs.rs/text-grid/"
keywords = ["text", "pretty", "table", "grid"]
categories = ["command-line-interface"]
description = "A library to create formatted plain-text tables."
exclude = ["/.vscode/*", "/.github/*"]
edition = "2021"

[dependencies]
unicode-width = "0.1.11"
derive-ex = "0.1.7"
csv = "1.3.0"
text-grid-macros = { path = "macros" }

[dev-dependencies]
pretty_assertions = "1.4.0"

[workspace]
members = ["macros"]
