[package]
name = "text-grid-macros"
version = "0.4.1"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/text-grid-rs"
description = "A library to create formatted plain-text tables."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["visit", "extra-traits"] }
structmeta = "0.3.0"
